# fast-skyseg

./: .gitignore  CMakeLists.txt  README.md  dataset.py  export_onnx.py  get_sky_mask.py  get_train_test_split.py  inference.py  losses.py  onnx2ncnn.sh  onnx_infer.py  parse_coco.py  profile.py  quant.py  quantize.py  train.py  train.sh  trainer.py  vis_compare.py
models/: _layers.py  _utils.py  bisenetv2.py  fast_scnn.py  mobilenetv3_lraspp.py  u2net.py
